manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-api
  namespace: public
  labels:
    app: workspace-api
    app.kubernetes.io/name: workspace-api
    app.kubernetes.io/part-of: presalytics
spec:
  selector:
    matchLabels:
      app: workspace-api
      app.kubernetes.io/name: workspace-api
      app.kubernetes.io/part-of: presalytics
  replicas: 3
  template:
    metadata:
      name: workspace-api
      namespace: public
      labels:
        app: workspace-api
        app.kubernetes.io/name: workspace-api
        app.kubernetes.io/part-of: presalytics
    spec:
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      containers:
      - name: workspace-api
        image: presalytics/workspace-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: chartalot-docker-registry
