manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace
  namespace: public
  labels:
    app: workspace
    app.kubernetes.io/name: workspace
    app.kubernetes.io/part-of: presalytics
spec:
  selector:
    matchLabels:
      app: workspace
      app.kubernetes.io/name: workspace
      app.kubernetes.io/part-of: presalytics
  replicas: 2
  template:
    metadata:
      name: workspace
      namespace: public
      labels:
        app: workspace
        app.kubernetes.io/name: workspace
        app.kubernetes.io/part-of: presalytics
    spec:  
      containers:
      - name: workspace
        image: presalytics/workspace
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
          - containerPort: 80
      - name: chartalot-docker-registry
