manifests/api-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: workspace-api
  namespace: api
  labels: 
    app: workspace-api
    app.kubernetes.io/part-of: workspace
spec:
  template:
    metadata:
      namespace: api
      labels: 
        app: woekspace-api
        app.kubernetes.io/part-of: workspace
        version: "2021-8-19.0"
    spec:
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: spot
                operator: In
                values:
                - "true"
      containers:
      - name: workspace-api
        image: presalytics/workspace-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
          - containerPort: 80
        env:
        - name: DJANGO_DEBUG
          value: 'True'
        - name: DB_REQUIRE_SSL
          value: 'True'
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: workspace
              key: db-password
        - name: DB_HOST
          valueFrom:
            secretKeyRef:
              name: workspace
              key: db-host
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              name: workspace
              key: db-user
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              name: workspace
              key: redis-password
        - name: REDIS_HOST
          value: key-value-store.redis.svc.cluster.local
        - name: WORKSPACE_CLIENT_URL
          value: https://workspace.presalytics.io
        - name: DJANGO_SETTINGS_MODULE
          value: api.settings.development
        - name: CLIENT_ID
          valueFrom:
            secretKeyRef:
              name: workspace
              key: api-client-id
        - name: CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              name: workspace
              key: api-client-secret
        - name: ALLOWED_HOSTS
          value: workspace-api.presalytics.io,workspace-api.public.svc.cluster.local,app.presalytics.io,worksapce.api.presalytics.io
        - name: DJANGO_SECRET_KEY
          valueFrom:
            secretKeyRef:
              name: workspace
              key: django-secret-key
