manifests/frontend-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  labels:
    app: workspace-frontend
    app.kubernetes.io/part-of: workspace
  name: workspace-frontend
  namespace: public
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/enable-scale-to-zero: 'false'
        autoscaling.knative.dev/minScale: '1'
      labels:
        app: workspace-frontend
        app.kubernetes.io/part-of: workspace
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: spot
                operator: In
                values:
                - 'true'
            weight: 1
      containers:
      - image: presalytics/workspace:latest
        imagePullPolicy: Always
        name: workspace
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 759m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 128Mi
      tolerations:
      - effect: NoSchedule
        key: kubernetes.azure.com/scalesetpriority
        operator: Equal
        value: spot
