manifests/kn-api-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: site
  namespace: public
  labels: 
    app: site
    app.kubernetes.io/part-of: site
spec:
  template:
    metadata:
      namespace: public
      labels: 
        app: site
        app.kubernetes.io/part-of: site
        version: "2021-8-16.0"
      annotations:
        autoscaling.knative.dev/enable-scale-to-zero: "false"
        autoscaling.knative.dev/minScale: "1"
    spec:
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: spot
                operator: In
                values:
                - "true"
